hphp/hack/test/typecheck/require_class/requireclass_syntax_02.bad.php.exp
ERROR: File "requireclass_syntax_02.bad.php", line 12, characters 17-17:
`I` is not a class. It is an interface. (NastCheck[3017])
ERROR: File "requireclass_syntax_02.bad.php", line 16, characters 17-18:
`Tr` is not a class. It is a trait. (NastCheck[3017])
